--- a/package.json
+++ b/package.json
@@ -15,22 +15,25 @@
     "start": "cross-env NODE_OPTIONS=--no-deprecation next start",
     "test": "pnpm run test:int && pnpm run test:e2e",
     "test:e2e": "cross-env NODE_OPTIONS=\"--no-deprecation --no-experimental-strip-types\" pnpm exec playwright test",
-    "test:int": "cross-env NODE_OPTIONS=--no-deprecation vitest run --config ./vitest.config.mts"
+    "test:int": "cross-env NODE_OPTIONS=--no-deprecation vitest run --config ./vitest.config.mts",
+    "seed": "cross-env PAYLOAD_SEEDING=true PAYLOAD_LOG_LEVEL=debug NODE_OPTIONS=--no-deprecation payload run src/seed/seed.ts",
+    "seed:clear": "cross-env NODE_OPTIONS=--no-deprecation payload run src/seed/seedClear.ts"
   },
   "dependencies": {
-    "@payloadcms/next": "3.61.1",
-    "@payloadcms/payload-cloud": "3.61.1",
-    "@payloadcms/richtext-lexical": "3.61.1",
-    "@payloadcms/ui": "3.61.1",
+    "@payloadcms/db-sqlite": "^3.64.0",
+    "@payloadcms/next": "^3.64.0",
+    "@payloadcms/payload-cloud": "^3.64.0",
+    "@payloadcms/richtext-lexical": "^3.64.0",
+    "@payloadcms/ui": "^3.64.0",
     "cross-env": "^7.0.3",
+    "csv-parse": "^6.1.0",
     "dotenv": "16.4.7",
     "graphql": "^16.8.1",
     "next": "15.4.4",
-    "payload": "3.61.1",
+    "payload": "^3.64.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "sharp": "0.34.2",
-    "@payloadcms/db-sqlite": "3.61.1"
+    "sharp": "0.34.2"
   },
   "devDependencies": {
     "@playwright/test": "1.54.1",
